<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/comic_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".comicdetails.view.ComicDetailsFragment">

    <ImageView
        android:id="@+id/imgFolder_comicDetailsFragment"
        android:layout_width="match_parent"
        android:layout_height="@dimen/folder_comic_details_height"
        android:contentDescription="@string/folder_comic_details"
        android:scaleType="centerCrop"
        android:src="@drawable/splashscreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/backButton_comicDetailsFragment"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="24dp"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/back_button" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardview_comicDetailsFragment"
        android:layout_width="120dp"
        android:layout_height="160dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="120dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgComic_comicDetailsFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_comic_photo"
            android:contentDescription="@string/foto_da_comic"
            android:scaleType="centerCrop" />

    </com.google.android.material.card.MaterialCardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardview_comicDetailsFragment" >

        <TextView
            android:id="@+id/txtTitle_comicDetailsFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Amazing Spider-Man (2014) #1 (han Variant)"
            android:textAllCaps="true"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtDetails_comicDetailsFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxHeight="170dp"
            android:layout_marginTop="16dp"
            tools:text="@tools:sample/lorem/random"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtTitle_comicDetailsFragment" />

        <TextView
            android:id="@+id/txtPublished_comicDetailsFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/published"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtDetails_comicDetailsFragment" />

        <TextView
            android:id="@+id/txtPrice_comicDetailsFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/price"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtPublished_comicDetailsFragment" />

        <TextView
            android:id="@+id/txtPages_comicDetailsFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/pages"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtPrice_comicDetailsFragment" />

        <TextView
            android:id="@+id/txtPublishedValue_comicDetailsFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            tools:text="April 30, 2014"
            app:layout_constraintStart_toEndOf="@+id/txtPublished_comicDetailsFragment"
            app:layout_constraintTop_toTopOf="@+id/txtPublished_comicDetailsFragment" />

        <TextView
            android:id="@+id/txtPriceValue_comicDetailsFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            tools:text="$ 5,99"
            app:layout_constraintStart_toEndOf="@+id/txtPrice_comicDetailsFragment"
            app:layout_constraintTop_toTopOf="@+id/txtPrice_comicDetailsFragment" />

        <TextView
            android:id="@+id/txtPagesValue_comicDetailsFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            tools:text="38"
            app:layout_constraintStart_toEndOf="@+id/txtPages_comicDetailsFragment"
            app:layout_constraintTop_toTopOf="@+id/txtPages_comicDetailsFragment" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>